update existing files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class= "container">
       <div class = "navbar-header"> 
         <%= link_to root_path do %>
-       <div class = "navbar-header navbar-logo"> <%= image_tag('BookClubPro3.png', size: "355x55") %>
+       <div class = "navbar-header navbar-logo"> <%= image_tag('BookClubProLogoY3.png', size: "344x55") %>
         <% end %>
        </div>
      <!--  <%= link_to   "Book", root_path, class: "navbar-brand yellow"  %>
