update existing files, added last nominate day

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -20,6 +20,7 @@
 	<%= f.input :amazon_link, label: "Add the Amazon link for your book to get more visibility and sales." %>
  	<%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
  	<%= f.input :bookprice,  label: "Amazon Print Price"%> 
+ 	<%= f.input :last_nominate_day, label: "If book on KindleScout, add the last day to nominate:" %> 
  	<%= f.button :submit, :class => "btn-custom2" %>
 
  	  <% end %>
