--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -26,7 +26,7 @@
     <%= f.input :amazon_link %>
     <%= f.input :ebookprice,  label: "Amazon Ebook Price" %> 
  	<%= f.input :bookprice, label: "Amazon Print Price" %> 
-
+ 	<%= f.input :last_nominate_day, label: "If book on KindleScout, add the last day to nominate:" %> 
 	<%= f.button :submit %>
 
 	  <% end %>
