--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -77,6 +77,7 @@
 						<% bookUrl = @book.amazon_link %>
 						<h4><b>Kindle Scout: 
 						<%= link_to  " Nominate on Kindle Scout", bookUrl , target: :_blank %></b></h2>
+						<h4><%= "Last Day to Nominate: #{@book.last_nominate_day}" %></h4>
 
 				<% elsif  @book.amazon_link.include?("/gp/") %>
 						<% s = @book.amazon_link %>
