--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,8 +39,7 @@
 	<h3>Books by  <%= @user.name %> </h3><br>
 
 	    <div class = "row">
-
-		<% @user.books.each do |book| %>
+		<% @user.books.order("created_at desc").each do |book| %>
 			<div class="col-md-2">
 			<a href="/books/<%= book.id %>">
 				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %>
