--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,51 @@
+<div class = "left-column" > 
+	<h3 class = "left-col-title">Categories</h3>
+</br>
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Action+and+Adventure">Action and Adventure</a> </h4>	
+	
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Biographies
+">Biographies</a> </h4>
+
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Business">Business</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Childrens">Childrens</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Drama">Drama</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Finance">Finance</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Health">Health</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Horror">Horror</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Investing">Investing</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Marketing">Marketing</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Mystery">Mystery</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Relationships">Relationships</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Romance">Romance</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Science">Science</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Self+help">Self Help</a> </h4>
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Suspense">Suspense</a> </h4>
+
+
+	<h4><a href= "http://www.bookclubpro.com/books?genre=Travel">Travel</a> </h4>
+
+
+
+
+
+
+
+</div>
+	
 <h4 class = "book-submit-promo">Is your book on Amazon? 
 	
 	 <% if user_signed_in? %>
@@ -23,7 +71,9 @@
 <h2 align = "center">Great Stories. Unique Perspectives. </h2>
 <br> -->
 
-	<div class = "row">
+
+
+	<div class = "row-books">
 
 		<% @books.each do |book| %>
 			<div class="col-md-3">
