--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "All Books", root_path %></li>
         <li class = "dropdown">
-         <a href="#" class = "dropdown-toggle" data-toggle= "dropdown" role = "button" aria-expanded= "false">Genres<span class= "caret"></span></a> <ul class = "dropdown-menu" role = "menu">
+         <a href="#" class = "dropdown-toggle" data-toggle= "dropdown" role = "button" aria-expanded= "false">Categories<span class= "caret"></span></a> <ul class = "dropdown-menu" role = "menu">
          <% Genre.order("name").each do |genre| %>
          <li class= "<%= 'active' if params[:genre] == genre.name %>"><%= link_to genre.name, books_path(genre: genre.name), class: "link" %> </li>
          <% end %>
