allow heroku auto assets precompilation

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,7 @@
+<%= render 'leftcolumn' %>
+
+<div class = "padding-on-left">
+
 <div class = "row">
    <div class  = "col-md-4">
 
@@ -206,7 +210,7 @@
 </div>		
 
 
-
+</div>
 
 <script type="text/javascript">
  $('.review-rating').raty({
