--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <!-- This file is used for the profile page -->
+
+<%= render 'books/leftcolumn' %>
+
+<div class = "padding-on-left">
+
 <div class =  "bookInfo">
 				<h1>Profile/Bio:</h1>  
 <br>
@@ -40,7 +45,7 @@
 
 	    <div class = "row">
 		<% @user.books.order("created_at desc").each do |book| %>
-			<div class="col-md-2">
+			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
 				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %>
 			</a>
@@ -59,7 +64,7 @@
 <%= link_to 'Back', url_for(:back) %>
 
 </div>
-
+</div>
 <br><br>
 
 
