--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -52,7 +52,7 @@
 
 
 			<% if 	@book.genre.present? %>
-			<h4>Genre: <%= @book.genre.name %></h4>
+			<h4>Category: <%= @book.genre.name %></h4>
 			<% end %>  
 			<h2>Average Rating:  </h2>
 			<div class = "average_review_rating" data-score= "<%= @average_review %>"></div> 
