--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,7 @@
 body {
 	background-color: #f5f5f5;
 	font-family: 'Lora', serif;
+	padding-top: 100px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -50,6 +51,7 @@ p.alert, p.notice {
 .navbar {
 	font-family: 'Ubuntu', sans-serif;
 	text-transform: uppercase;
+	
 
 }
 .navbar-default {
@@ -57,6 +59,11 @@ p.alert, p.notice {
 	padding-bottom: 5px;
 	padding-top: 5px;
 	height: 65px;
+	position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 
 	.navbar-nav > li > a {
 		color: #fff;
