--- a/app/views/books/_leftcolumn.html.erb
+++ b/app/views/books/_leftcolumn.html.erb
@@ -1,41 +1,42 @@
 <div class = "left-column" > 
 	<h3 class = "left-col-title">Categories</h3>
+
 </br>
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Action+and+Adventure">Action and Adventure</a> </h4>	
+	<h4><a href= "/books?genre=Action+and+Adventure">Action and Adventure</a> </h4>	
 	
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Biographies
+	<h4><a href= "/books?genre=Biographies
 ">Biographies</a> </h4>
 
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Business">Business</a> </h4>
+	<h4><a href= "/books?genre=Business">Business</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Childrens">Childrens</a> </h4>
+	<h4><a href= "/books?genre=Childrens">Childrens</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Drama">Drama</a> </h4>
+	<h4><a href= "/books?genre=Drama">Drama</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Finance">Finance</a> </h4>
+	<h4><a href= "/books?genre=Finance">Finance</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Health">Health</a> </h4>
+	<h4><a href= "/books?genre=Health">Health</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Horror">Horror</a> </h4>
+	<h4><a href= "/books?genre=Horror">Horror</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Investing">Investing</a> </h4>
+	<h4><a href= "/books?genre=Investing">Investing</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Marketing">Marketing</a> </h4>
+	<h4><a href= "/books?genre=Marketing">Marketing</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Mystery">Mystery</a> </h4>
+	<h4><a href= "/books?genre=Mystery">Mystery</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Relationships">Relationships</a> </h4>
+	<h4><a href= "/books?genre=Relationships">Relationships</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Romance">Romance</a> </h4>
+	<h4><a href= "/books?genre=Romance">Romance</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Science">Science</a> </h4>
+	<h4><a href= "/books?genre=Science">Science</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Self+help">Self Help</a> </h4>
+	<h4><a href= "/books?genre=Self+help">Self Help</a> </h4>
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Suspense">Suspense</a> </h4>
+	<h4><a href= "/books?genre=Suspense">Suspense</a> </h4>
 
 
-	<h4><a href= "http://www.bookclubpro.com/books?genre=Travel">Travel</a> </h4>
+	<h4><a href= "/books?genre=Travel">Travel</a> </h4>
 
 </div>
