--- a/app/views/books/showBackup.html.erb
+++ b/app/views/books/showBackup.html.erb
@@ -6,11 +6,24 @@
    <div class  = "col-md-4">
 
    	<% if @book.amazon_link.present? %>
-	   	
-					<% bookUrl = @book.amazon_link %>
+	   	<% if @book.amazon_link.include?("kindlescout") %>
+							<% bookUrl = @book.amazon_link %>
 
 
-		
+		<% elsif  @book.amazon_link.include?("/gp/") %>
+						<% s = @book.amazon_link %>
+						<% s1a = s.split('d/')[-1] %>
+						<% s1 = s1a.split('ref')[0] %>
+						<% s2 = s1.split("/")[0] %>
+						<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+
+		<% else %>
+							<% s = @book.amazon_link %>
+							<% s1a = s.split('dp/')[-1] %>
+							<% s1 = s1a.split('?psc=1')[-1] %>
+							<% s2 = s1.split("/")[0] %>
+							<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
+		<% end %>
 
 		<a href= "<%= bookUrl %>" target="_blank"><%= image_tag @book.book_imgage.url(:book_show), class: "bookdisplaysize" %></a>					
 
