--- a/app/views/books/showBackup.html.erb
+++ b/app/views/books/showBackup.html.erb
@@ -1,3 +1,4 @@
+<!-- File backup created on April 10 2017 after making amazon link default. This is the backup prior to change.-->
 <%= render 'leftcolumn' %>
 
 <div class = "padding-on-left">
