Going to push to Heroku and Git

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,7 +38,7 @@
 			<% end %>
 
 			<%# gets the twitter handle for author of book so it can be used on the books show page %>
-			Follow on Twitter: <%= @book.user.twitter_handle%>
+			<h4> Follow on Twitter: <%= @book.user.twitter_handle%> </h4>
 				
 			
 			<% if 	@book.genre.present? %>
