Changed User bio page to show image beside the user' bio info

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,13 @@
 
 /* Variables, mixins, etc.. */
 
-	
+.td_padding {
+	padding: 14px;
+}
+
+.td_bottom_pad {
+	padding-bottom: 65px;
+}
 
 @mixin background-tile {
 	box-sizing: border-box;
