Added links to twitter accounts and changed field name on book_image

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,7 +7,7 @@
  	<br>
  	<br>
  	<h4><b>Add Your Book Image:</b></h4>
- 	<%= f.file_field :book_imgage,  :class => "col-md-4 form-for"%>
+ 	<%= f.file_field :book_image,  :class => "col-md-4 form-for"%>
  	<br>
  	<br>
  	<h4><b>Add Your Book Teaser: </b>(optional, can be added later. This will be sent with tweets.)</h4>
