--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,7 +36,7 @@
 		<% @books.each do |book| %>
 			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
-				<%= image_tag book.book_imgage.url(:book_index), class: "booksize"  %>
+				<%= image_tag book.book_image.url(:book_index), class: "booksize"  %>
 			</a>
 
 			</div>
