--- a/app/views/books/showBackup.html.erb
+++ b/app/views/books/showBackup.html.erb
@@ -26,11 +26,11 @@
 							<% bookUrl = "http://www.amazon.com/dp/#{s2}/?tag=ebookleaders1-20" %>
 		<% end %>
 
-		<a href= "<%= bookUrl %>" target="_blank"><%= image_tag @book.book_imgage.url(:book_show), class: "bookdisplaysize" %></a>					
+		<a href= "<%= bookUrl %>" target="_blank"><%= image_tag @book.book_image.url(:book_show), class: "bookdisplaysize" %></a>					
 
 	<% else %>
 
-		<%= image_tag @book.book_imgage.url(:book_show), class: "bookdisplaysize" %>
+		<%= image_tag @book.book_image.url(:book_show), class: "bookdisplaysize" %>
 	<% end %>
 
 
