--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,14 +11,19 @@
 <%= image_tag @user.avatar, class: "avatar-pic"%>
 <% end %>
 
+
+<%# twitter handle link %>
 <% if @user.twitter_handle.present? %>	
-	<% if @user.twitter_handle.include? ("@") %>
-	<h4><%=  "Twitter: " + @user.twitter_handle %></h4>
+		<% if @user.twitter_handle.include? ("@") %>
+				<h4><a class="twitter-follow-button"
+				href="https://twitter.com/<%= @user.twitter_handle%>" target="_blank">
+				<%= "Twitter: " + @user.twitter_handle %></a></h4>
+		<% else %>
 
-	<% else %>
-
-	<h4><%=  "Twitter Handle: @" + @user.twitter_handle %></h4>
-	<% end %>
+				<h4><a class="twitter-follow-button"
+				href="https://twitter.com/<%= @user.twitter_handle%>" target="_blank">
+				<%= "Twitter: @" + @user.twitter_handle %></a></h4>
+		<% end %>
 
 <% end %>
 
@@ -47,7 +52,7 @@
 		<% @user.books.order("created_at desc").each do |book| %>
 			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
-				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %>
+				<%= image_tag book.book_image.url(:book_index), class: "booksizesmaller" %>
 			</a>
 
 			</div>
