Added stylling to bio headings

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -182,8 +182,12 @@ p.alert, p.notice {
 	background: #008080;
 	color: #ffffff;
 	padding: 6px;
+}
 
-	
+.profile_heading {
+	background: #008080;
+	color: #ffffff;
+	padding-left: 7px;
 }
 
 .left-column {
