Admin button added to navbar.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,6 +99,7 @@ p.alert, p.notice {
 	}
 
 
+
 .navbar-logo{
 			float: left;
 			padding-right: 8px;
@@ -182,6 +183,10 @@ p.alert, p.notice {
 	background: #008080;
 	color: #ffffff;
 	padding: 6px;
+}
+
+.margin_top {
+	margin-top: 10px;
 }
 
 .profile_heading {
