--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,15 @@
 
         <% end %>
 
-
+ <ul class="navbar-right">
+    <% if user_signed_in? %>
+      <% if current_user.superadmin_role? %>
+        <ul class="navbar-right btn btn-warning btn-sm margin_top">  
+        <a href="/admin">Admin</a> 
+        </ul>
+      <% end %>
+    <% end %>
+  </ul>
         
       </ul>
 
@@ -78,8 +86,10 @@
             <% end %>
            
          </div> -->
+         
 
     </div>
+    
 
   </nav>
 
