Added Dynamic Categories to left column.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,6 +123,11 @@ p.alert, p.notice {
 	color: #fff;
 }
 
+.chosen {
+	background-color: #f1c40f;
+	color: #fff;
+	padding: 4px 0px;
+}
 
 
 .btn-custom {
