Search works now. But need to style it below  navbar or into navbar.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,14 @@
 
         <% end %>
 
+        <ul class="search_box navbar-right">
+          <%# search box on navbar %>
+          <%= form_tag books_path, :method => 'get' do %>
+              <%= text_field_tag :search, params[:search] %>
+              <%= submit_tag "Search", :name => nil %>
+           <% end %>
+       </ul> 
+
  <ul class="navbar-right">
     <% if user_signed_in? %>
       <% if current_user.superadmin_role? %>
