--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,14 +52,7 @@
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li> 
 
         <% end %>
-
-        <ul class="search_box navbar-right">
-          <%# search box on navbar %>
-          <%= form_tag books_path, :method => 'get' do %>
-              <%= text_field_tag :search, params[:search] %>
-              <%= submit_tag "Search", :name => nil %>
-           <% end %>
-       </ul> 
+        
 
  <ul class="navbar-right">
     <% if user_signed_in? %>
@@ -94,9 +87,15 @@
 
   </nav>
 
+ <ul class="search_box right">
+          <%# search box on navbar %>
+          <%= form_tag books_path, :method => 'get' do %>
+              <%= text_field_tag :search, params[:search] %>
+             <%= submit_tag "Search", :name => nil,  class:"btn_search"%>
+           <% end %>
+  </ul> 
 
-
-
+  
   	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
