--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,19 +87,21 @@
 
   </nav>
 
- <ul class="search_box right">
+ 
+
+  <div class = "container">
+  <ul class="right">
           <%# search box on navbar %>
           <%= form_tag books_path, :method => 'get' do %>
               <%= text_field_tag :search, params[:search] %>
              <%= submit_tag "Search", :name => nil,  class:"btn_search"%>
            <% end %>
-  </ul> 
-
+  
   
   	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-
-    <div class = "container">
+</ul> 
+    
     <%= yield %>
   </div>
   </body>
