--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "All Books", root_path %></li>
+        <%# <li><%= link_to "All Books", root_path %>
         <li class = "dropdown">
          <a href="#" class = "dropdown-toggle" data-toggle= "dropdown" role = "button" aria-expanded= "false">Categories<span class= "caret"></span></a> <ul class = "dropdown-menu" role = "menu">
          <% Genre.order("name").each do |genre| %>
