Fixed paginate to work with search feature.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -45,7 +45,7 @@
 	
 	</div>
 
-<h3 align = "center"> <%= will_paginate @book if @book.present? %></h3>
+<h3 align = "center"> <%= will_paginate @book %></h3>
 </br>
 </br>  
 
