--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -225,7 +225,7 @@ p.alert, p.notice {
   top:17%;
   left:0;
   width:14%;
-  height:100%;
+  // height:100%;
   background:#ffffff;
   border: 3px solid #008080 ;
   border-radius: 12px;
