Styled admin button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
  <ul class="navbar-right">
     <% if user_signed_in? %>
       <% if current_user.superadmin_role? %>
-        <ul class="navbar-right btn btn-warning btn-sm margin_top">  
+        <ul class="navbar-right btn_admin btn-sm margin_top">  
         <a href="/admin">Admin</a> 
         </ul>
       <% end %>
