Changed bio heading and added styling to back button on authors bio page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 <div class = "padding-on-left">
 
 <div class =  "bookInfo">
-				<div class="profile_heading"><h2>Profile/Bio: <%= @user.name %></h2> </div> 
+				<div class="profile_heading"><h2> <%= @user.name %>'s Bio</h2> </div> 
 <br>
 
 <%# start of pic and bio info %>
