Changed Bio heading and styled back button on authors bio page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,7 +71,7 @@
 <div class = "links btn-group">
 
 
-<%= link_to 'Back', url_for(:back) %>
+<%= link_to 'Back', url_for(:back), class: "btn btn-custom" %> 
 
 </div>
 </div>
