--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,11 +34,10 @@
 				
 				<% if @user.author_bio.present? %>
 
-					<h4><%= @user.author_bio %></h4>
+					<h4><%= auto_link(@user.author_bio, :all, :target => "_blank", :class => "comments_link") %></h4>
 
 				<% else %>
-
-					<h4><%= @user.reviewer_bio %></h4>
+					<h4><%= auto_link(@user.reviewer_bio, :all, :target => "_blank", :class => "comments_link") %></h4>
 
 				<% end %>
 			</td>
@@ -76,6 +75,18 @@
 </div>
 </div>
 <br><br>
+
+
+<script language="javascript" type="text/javascript">
+<!--
+function popitup(url) {
+	newwindow=window.open(url,'name','height=200,width=150');
+	if (window.focus) {newwindow.focus()}
+	return false;
+}
+
+// -->
+</script>
 
 
 
