--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,6 +57,10 @@
 			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
 				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %>
+				<% if book.amazon_link.present? %>
+				  <div><a href='<%= book.amazon_link %>'target="_blank">Amazon: <%= book.bookprice if book.bookprice? %></a></div>
+				<% end %>
+				
 			</a>
 
 			</div>
