--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -56,9 +56,10 @@
 		<% @user.books.order("created_at desc").each do |book| %>
 			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
-				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %>
+				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %></a>
 				<% if book.amazon_link.present? %>
-				  <div><a href='<%= book.amazon_link %>'target="_blank">Amazon: <%= book.bookprice if book.bookprice? %></a></div>
+				<h4>Amazon</h4>
+				  <div><a href='<%= book.amazon_link %>'target="_blank"> <%= "Print:  #{book.bookprice}" if book.bookprice? %> <%= "eBook:  #{book.ebookprice} "  if book.ebookprice? %></a></div>
 				<% end %>
 			</a>
 
@@ -67,10 +68,9 @@
 <% end %>
 
 
-<br>
-<br>
+
 </div>
-<br>
+<br><br>
 <div class = "links btn-group">
 
 
