--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,9 +57,10 @@
 			<div class="col-md-3">
 			<a href="/books/<%= book.id %>">
 				<%= image_tag book.book_imgage.url(:book_index), class: "booksizesmaller" %></a>
-				<% if book.amazon_link.present? %>
-				
+				<% if book.bookprice.present? || book.ebookprice.present? %>
 				  <div><a href='<%= book.amazon_link %>'target="_blank"> <%= "Print:  #{book.bookprice}" if book.bookprice? %> <%= "eBook:  #{book.ebookprice} "  if book.ebookprice? %></a></div>
+				<% else %>
+					<%= "" %>
 				<% end %>
 			</a>
 
